Arregle mostrarPrimero en Hospital