@@ -27,10 +27,12 @@ public class Hospital {
     }
     
     public void mostrarPrimero(){
-        System.out.println("Nombre: " + ordenPrioridad.getFirst().toString());
-        //System.out.println("Nombre: " + pacientes.get(0).getNombre());
-        //System.out.println("Sintoma: " + pacientes.get(0).getSintoma());
-        //System.out.println("Gravedad: " + pacientes.get(0).getCodigoEmergencia());
+        System.out.println("Datos del paciente prioritario:");
+        Paciente pacientePrioritario;
+        pacientePrioritario = (Paciente) ordenPrioridad.getFirst();
+        System.out.println("Nombre: " + pacientePrioritario.getNombre());
+        System.out.println("Sintoma: " + pacientePrioritario.getSintoma());
+        System.out.println("Gravedad: " + pacientePrioritario.getCodigoEmergencia());
     }
     
     public void mostrarCola(){
